# dev

./: .gitignore  .projectile  README.md
cpp/: .gitignore
cpp/SerialMonitor/: LICENSE  README.md  mainwindow.cpp  mainwindow.h  mockmonitor.cpp  mockmonitor.pro  mockmonitor.pro.user.0d9f939.3.3-pre1  mockmonitor.ui
cpp/bnd/: bnd.pro  main.cpp  mainwindow.cpp  mainwindow.h  plot.cpp  readbox.cpp  readbox.h  samplingthread.cpp  samplingthread.h  wheelbox.cpp
cpp/cherno/class_static/: main.cpp
cpp/cherno/local_static/: main.cpp
cpp/cherno/member_initializer/: .gitignore  main.cpp
cpp/cherno/singleton/: main.cpp
cpp/cherno/strings/: main.cpp
cpp/cherno/this/: .gitignore  main.cpp
cpp/event_filter/: Makefile  event_filter.pro
cpp/functions/: CMakeLists.txt
cpp/gtk-calculate/: gtkcal
cpp/helloworld/: CMakeLists.txt
cpp/helloworld/src/: Log.cpp  main.cpp
cpp/mystaticlib/: CMakeLists.txt
cpp/mystaticlib/src/: mystatic.cpp
cpp/oscilloscope/: Makefile  mainwindow.cpp  oscilloscope.pro  plot.cpp
cpp/oscilloscope/moc/: moc_knob.cpp  moc_mainwindow.cpp  moc_plot.cpp  moc_samplingthread.cpp  moc_wheelbox.cpp
cpp/refreshtest/: Makefile  refreshtest.pro
cpp/refreshtest/moc/: moc_mainwindow.cpp  moc_panel.cpp  moc_plot.cpp
cpp/smt32-main/: main.c
cpp/using-libs/src/: main.cpp
cpp/variables/: CMakeLists.txt
db-proj/: CMakeLists.txt
db-proj/src/: main.cpp
functions/src/: main.cpp
gtk-calculate/: gtkcal
headers/: .clangformat
helloworld/src/: main.cpp
js/async-await/: async-await.html  async-await.js  callback.js  index.html  promise.js
js/playground/: index.html  main.js
mystaticlib/: CMakeLists.txt
mystaticlib/src/: mystatic.cpp
notes/: cplusplus.org
react/task-tracker/: package-lock.json
react/task-tracker/src/: App.js
rust/dir1/: file2
rust/dir1/dir2/: file3  file4
rust/guessing_game/: Cargo.toml
rust/guessing_game/src/: main.rs
rust/hello_cargo/: Cargo.toml
rust/hello_cargo/src/: main.rs
using-libs/: CMakeLists.txt
using-libs/dependencies/mystatic/include/: mystatic.h
variables/src/: main.cpp
